Fix top of preview panel when global error message is visible

--- a/src/map/containers/preview-panel/_map-preview-panel.scss
+++ b/src/map/containers/preview-panel/_map-preview-panel.scss
@@ -20,6 +20,7 @@
 
   .c-dashboard__body--error & {
     max-height: calc(100vh - #{$map-preview-panel-top + $map-preview-panel-bottom + $dashboard-error-height});
+    top: #{$map-preview-panel-top + $dashboard-error-height};
   }
 
   &--hidden {
